# fastapi-celery-project

./: .gitignore  .pre-commit-config.yaml  alembic.ini  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 2025-08-19_init.py
compose/local/fastapi/: Dockerfile
project/: __init__.py  config.py
project/users/: tasks.py
