[project]
name = "fastapi-celery-project"
version = "0.1.0"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "scalar-fastapi",
    "celery==5.5.3",
    "flower==2.0.1",
    "SQLAlchemy==2.0.43",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "watchfiles==0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0"
]

[tool.setuptools]
#packages = ["app"]